<resources>
    <string name="app_name">MyEnglish</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_form">Form</string>
    <string name="action_main">Main</string>
    <string name="action_untranslated">Untranslated</string>
    <string name="action_carousel">Carousel</string>
    <string name="action_view">Carousel</string>
    <string name="action_quiz">Quiz</string>

    <string name="title_activity_main">Main</string>
    <string name="title_activity_form">Form</string>
    <string name="title_activity_untranslated">Untranslated</string>
    <string name="title_activity_view">Carousel</string>
    <string name="title_activity_quiz">Quiz</string>


    <string name="color_default">#FFFFFFFF</string>
    <string name="color_success">#FF22FF0B</string>
    <string name="color_warning">#FFE6DA02</string>
    <string name="color_error">#FFFF2000</string>

    <string name="color_level_0">#FFFF2000</string>
    <string name="color_level_1">#FFFF2000</string>
    <string name="color_level_2">#FFFF2000</string>
    <string name="color_level_3">#FFFF2000</string>
    <string name="color_level_4">#FFFF2000</string>
    <string name="color_level_5">#FFFF2000</string>
    <string name="color_level_6">#FFFF2000</string>
    <string name="color_level_7">#FFFF2000</string>
    <string name="color_level_8">#FFFF2000</string>
    <string name="color_level_9">#FFFF2000</string>
    <string name="color_level_10">#FFFF2000</string>

</resources>
