<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_main" android:title="@string/action_main"
        android:orderInCategory="1" android:showAsAction="never" />
    <item android:id="@+id/action_form" android:title="@string/action_form"
        android:orderInCategory="2" android:showAsAction="never" />
    <item android:id="@+id/action_untranslated" android:title="@string/action_untranslated"
        android:orderInCategory="3" android:showAsAction="never" />
    <item android:id="@+id/action_carousel" android:title="@string/action_carousel"
        android:orderInCategory="4" android:showAsAction="never" />
    <item android:id="@+id/action_quiz" android:title="@string/action_quiz"
        android:orderInCategory="5" android:showAsAction="never" />
    <item android:id="@+id/action_stats" android:title="@string/action_stats"
        android:orderInCategory="6" android:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
